[package]
name = "axum-pg-tower"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tower-http = { version = "0.6.6", features = ["fs"] }
tokio = { version = "1.42.0", features = ["full"] }
table_to_html = "0.9.0"
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
tokio-postgres = "0.7.12"
postgres = { version = "0.19.10", features = ["with-chrono-0_4"] }
postgres-types = "0.2.9"
chrono = { version = "0.4.24", features = ["serde"] } # enable chrono's serde support
serde = "1.0.219"
serde_json = "1.0.140"

