[package]
name = "pg_rust_data_inserter"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1.42.0", features = ["full"] }
sqlx = { version = "0.8.2", features = ["chrono", "postgres", "runtime-tokio"] }
chrono = { version = "0.4.24", features = ["serde"] } # enable chrono's serde support
num-bigint = "0.4.6"
dotenv = "0.15"
serde = "1.0.219"
serde_json = "1.0.140"
postgres = { version ="0.19.10", features = ["with-chrono-0_4"] }
postgres-types = "0.2.9"
tokio-postgres = "0.7.12"

